--- a/pom.xml
+++ b/pom.xml
@@ -23,45 +23,17 @@
  		<spring-cloud.version>Finchley.M9</spring-cloud.version>
 <!-- 		<spring-boot-version>1.5.10.RELEASE</spring-boot-version> --> 
   		<spring-boot-version>2.0.1.RELEASE</spring-boot-version>
+  		 		<start-class>mk.MicroserviceApp</start-class>
 	</properties>
   
-  <build>
-    <sourceDirectory>src</sourceDirectory>
+ 	<build>
+   <sourceDirectory>src/main/java/</sourceDirectory>
 		<plugins>
 
-
- <plugin>
-      <groupId>io.prometheus</groupId>
-      <artifactId>simpleclient</artifactId>
-      <version>0.0.13</version>
- </plugin>
-
- <plugin>
-      <groupId>io.prometheus</groupId>
-      <artifactId>simpleclient_common</artifactId>
-      <version>0.0.13</version>
- </plugin>
-
- <plugin>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-maven-plugin</artifactId>
-		<version>${spring-boot-version}</version>
-
-      <!-- 
-      <executions>
-        <execution>
-          <goals>
-            <goal>repackage</goal>
-          </goals>
-        </execution>
-      </executions>
-       -->
-    </plugin>
-
-
-			<plugin>
+ 
+	<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.7.0</version>
 				<configuration>
 				<includes>
              <include>src/main/java/**/*.java</include>
@@ -69,6 +41,24 @@
         </includes>
 				</configuration>
 			</plugin>
+
+    <plugin>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-maven-plugin</artifactId>
+<!--       <version>{spring-boot-version}</version> -->
+ <!--   <version>{spring-boot-version}</version> -->
+      <configuration>
+        <mainClass>${start-class}</mainClass>
+        <layout>ZIP</layout>
+      </configuration>
+      <executions>
+        <execution>
+          <goals>
+            <goal>repackage</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
 
 <!-- 
 
@@ -90,8 +80,7 @@
 
  -->
  
- 				
-
+ 	
 
 			<!-- .... other plugins ... -->
 
@@ -101,7 +90,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
-
+				<version>1.8</version>
 				<executions>
 					<execution>
 						<id>scp-to-remote</id>
@@ -111,19 +100,22 @@
 						</goals>
 						<configuration>
 							<target>
+							
+<copy file="${project.build.directory}/${project.artifactId}-${project.version}.jar" tofile="${project.basedir}/docker/${project.artifactId}-${project.version}.jar" />
+					
 								<!-- keyfile+passphrase or password, choose one -->
 								<!-- <scp localFile="${project.basedir}/target/qos-spark-1.0.jar" 
-									remoteToFile="root@tools.local:/usr/sanss" verbose="true" keyfile="C:\Users\shengw\.ssh\192.168.203.156\id_rsa" 
+									remoteToFile="root@kubernetes1.local:/usr/sanss" verbose="true" keyfile="C:\Users\shengw\.ssh\192.168.203.156\id_rsa" 
 									passphrase=""> </scp> -->
-								<scp localFile="${project.basedir}/target/SpringBootMicroservice-0.0.1-SNAPSHOT.jar"
-									remoteToFile="marcin@tools.local:/home/marcin/SpringBootMicroservice/docker" verbose="true" password="1qaz2wsx"
+					<!-- 			<scp localFile="${project.basedir}/target/SpringBootKafkaListener-0.0.1-SNAPSHOT.jar"
+									remoteToFile="marcin@tools.local:/home/marcin/SpringBootKafkaListener/docker" verbose="true" password="1qaz2wsx"
 									trust="true">
 								</scp>
 
-								<!-- calls deploy script -->
-								<sshexec host="tools.local" trust="yes" username="marcin"
-									password="1qaz2wsx" command="sed -i -e 's/\r//g' /home/marcin/SpringBootMicroservice/kubernetes/deploy.sh;sh /home/marcin/SpringBootMicroservice/kubernetes/deployXXX.sh" />
-
+	
+							<sshexec host="tools.local" trust="yes" username="marcin"
+									password="1qaz2wsx" command="sed -i -e 's/\r//g' /home/marcin/SpringBootKafkaListener/kubernetes/deploy.sh;sh /home/marcin/SpringBootKafkaListener/kubernetes/deployXXX.sh" />
+ -->
 							</target>
 						</configuration>
 					</execution>
@@ -147,6 +139,8 @@
 			<!-- antrun plugin end -->
 			<!-- =========================================== -->
 
+				
+				
  
  
 		</plugins>
