--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,66 +1,3 @@
-logging:
-    file: logs/application.log
-    level:
-        io:
-            micrometer:
-                graphite: DEBUG
-server:
-    port: 9191
-management:
-    security:
-        enabled: false
-
-
-#    influxdbeserver: monitoring-influxdb.kube-system.svc.cluster.local                
-    influxdbeserver: monitoring-influxdb
-management.metrics.export.graphite:
-    host: k8snode1.local
-#                 port: 2003 
-    port: 30003
-    protocol: Plaintext
-    enabled: true
-    step: 10s    
-#management.metrics.export.influx:
-#    uri: http://monitoring-influxdb:30080
 spring:
-    application:
-        name: SpringBootMicroservice
-        
-    cloud:
-        consul:
-            discovery:
-                preferIpAddress: true
-                instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
-            port: 8500        
-        config:
-            enabled: true
-            data-key: props
-            prefix: config
-            format: PROPERTIES        
-#spring.jpa.hibernate.ddl-auto=create
-    datasource:
-        hikari:
-            connection-test-query: SELECT 1 FROM DUAL
-            minimum-idle: 1
-            maximum-pool-size: 5
-            pool-name: yourPoolName
-            auto-commit: true
-        url: jdbc:mysql://localhost:3306/test
-        username: root
-        password: 
-#spring.datasource.driver-class-name=Driver
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-    jpa:
-        properties:
-            hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
-            hibernate.show_sql: true
-    rabbitmq:
-        host:tools.local
-        password:guest
-        port:5672
-    zipkin:
-        baseUrl: http://springbootzipkin:7777
-    sleuth:
-        sampler:
-            percentage: 1
- 
+ profiles:
+  active: dev
