--- a/src/main/resources/bootstrap-prd.yml
+++ b/src/main/resources/bootstrap-prd.yml
@@ -45,7 +45,7 @@ spring:
             maximum-pool-size: 5
             pool-name: yourPoolName
             auto-commit: true
-        url: jdbc:mysql://localhost:3306/test
+        url: jdbc:mysql://mysql:3306/test
         username: root
         password: 
 #spring.datasource.driver-class-name=Driver
