--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@ spring-cloud.version
 Finchley.M9
 Edgware.SR3
 Dalston.SR3
- --> 		<spring-cloud.version>Finchley.M9</spring-cloud.version>
+ --> 		<spring-cloud.version>Dalston.SR3</spring-cloud.version>
   		<spring-boot-version>1.5.10.RELEASE</spring-boot-version>
   		 		<start-class>mk.MicroserviceApp</start-class>
 	</properties>
