--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@ spring-cloud.version
 Finchley.M9
 Edgware.SR3
 Dalston.SR3
- --> 		<spring-cloud.version>Dalston.SR3</spring-cloud.version>
-  		<spring-boot-version>1.5.10.RELEASE</spring-boot-version>
+ --> 		<spring-cloud.version>Finchley.M9</spring-cloud.version>
+  		<spring-boot-version>2.0.1.RELEASE</spring-boot-version>
   		 		<start-class>mk.MicroserviceApp</start-class>
 	</properties>
   
@@ -247,14 +247,12 @@ Dalston.SR3
 </dependency>
  -->
 
-<!-- 
 <dependency>
   <groupId>io.micrometer</groupId>
   <artifactId>micrometer-registry-graphite</artifactId>
 </dependency>
- -->
- 
- 
+
+
   </dependencies>
   
   <dependencyManagement> 
