--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@ Finchley.BUILD-SNAPSHOT
 Edgware.SR3
 Dalston.SR3
 Fishtown.BUILD-SNAPSHOT
- --> 		<spring-cloud.version>Dalston.SR3</spring-cloud.version>
-  		<spring-boot-version>1.5.10.RELEASE</spring-boot-version>
+ --> 		<spring-cloud.version>Finchley.M9</spring-cloud.version>
+  		<spring-boot-version>2.0.1.RELEASE</spring-boot-version>
   		 		<start-class>mk.MicroserviceApp</start-class>
 	</properties>
   
