--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@ Finchley.BUILD-SNAPSHOT
 Edgware.SR3
 Dalston.SR3
 Fishtown.BUILD-SNAPSHOT
- --> 		<spring-cloud.version>Finchley.M9</spring-cloud.version>
-  		<spring-boot-version>2.0.1.RELEASE</spring-boot-version>
+ --> 		<spring-cloud.version>Dalston.SR3</spring-cloud.version>
+  		<spring-boot-version>1.5.10.RELEASE</spring-boot-version>
   		 		<start-class>mk.MicroserviceApp</start-class>
 	</properties>
   
@@ -232,8 +232,6 @@ Fishtown.BUILD-SNAPSHOT
 <groupId>org.springframework.cloud</groupId>
 <artifactId>spring-cloud-sleuth-zipkin</artifactId>
 </dependency>
-
-
 <!-- 
 <dependency>
   <groupId>io.micrometer</groupId>
@@ -245,6 +243,7 @@ Fishtown.BUILD-SNAPSHOT
 <dependency>
   <groupId>io.micrometer</groupId>
   <artifactId>micrometer-registry-graphite</artifactId>
+  <version>1.0.3</version>
 </dependency>
  -->
 
@@ -284,7 +283,7 @@ Fishtown.BUILD-SNAPSHOT
             <enabled>false</enabled>
         </snapshots>
     </repository>
-
+<!-- 
     <repository>
         <id>spring-snapshots</id>
         <name>Spring Snapshots</name>
@@ -293,6 +292,7 @@ Fishtown.BUILD-SNAPSHOT
             <enabled>true</enabled>
         </snapshots>
     </repository>   
+     -->
 </repositories>
   
 </project>
