--- a/docker/filebeatstokafka.yml
+++ b/docker/filebeatstokafka.yml
@@ -27,7 +27,7 @@ output.kafka:
   enabled: true
   #configure topic as per your application need
   #hosts: ["hdp1.local:6667","hdp2.local:6667","hdp3.local:6667"]
-  hosts: [${KAFKA_BROKER_NODES:"hdp1.local:6667","hdp2.local:6667","hdp3.local:6667"}]
+  hosts: [${KAFKA_BROKER_NODES}]
   
   topic: logs
 #================================ Logging =====================================
