--- a/src/main/resources/bootstrap-dev.yml
+++ b/src/main/resources/bootstrap-dev.yml
@@ -73,7 +73,7 @@ management:
     endpoints:
         web:
             exposure:
-                include: "*"
+                include: "info, health, prometheus"
         metrics:
             enabled: true
     metrics:
