--- a/src/main/resources/bootstrap-prd.yml
+++ b/src/main/resources/bootstrap-prd.yml
@@ -72,7 +72,7 @@ management:
     endpoints:
         web:
             exposure:
-                include: "*"
+                include: "info, health, prometheus"
         metrics:
             enabled: true
     metrics:
