--- a/src/main/resources/bootstrap-prd.yml
+++ b/src/main/resources/bootstrap-prd.yml
@@ -43,6 +43,9 @@ spring:
         username: root
         password: secret
 #spring.datasource.driver-class-name=Driver
+    data:
+        mongodb:
+            uri: mongodb://mongodb-routers-0.mongodb-router-cs.default.svc.cluster.local:27017/mkdatabase
 # Allows Hibernate to generate SQL optimized for a particular DBMS
     jpa:
         properties:
