--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,12 @@ Fishtown.BUILD-SNAPSHOT
         </dependency>
          -->
 
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+</dependency>
+
  <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -217,6 +223,11 @@ Fishtown.BUILD-SNAPSHOT
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
+</dependency>
+
+<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
 </dependency>
 
 <dependency>
