--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,12 @@ Fishtown.BUILD-SNAPSHOT
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-data-jpa</artifactId>
   </dependency>
+    
+<dependency>
+  <groupId>com.h2database</groupId>
+  <artifactId>h2</artifactId>
+  <scope>test</scope>
+</dependency>
   
 <dependency>
     <groupId>mysql</groupId>
