--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,12 @@ Fishtown.BUILD-SNAPSHOT
   <scope>test</scope>
 </dependency>
   
+  <dependency>
+    <groupId>org.assertj</groupId>
+    <artifactId>assertj-core</artifactId>
+<!--     <scope>test</scope> -->
+</dependency>
+  
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
