add circuit breaker

--- a/pom.xml
+++ b/pom.xml
@@ -286,6 +286,13 @@ Fishtown.BUILD-SNAPSHOT
     </dependency>
  -->
 
+ <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+			<!--  <artifactId>spring-cloud-starter-hystrix</artifactId>-->
+			
+		</dependency>
+
 
 	</dependencies>
 
