--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,18 @@ Fishtown.BUILD-SNAPSHOT
 			
 		</dependency>
 
+ 
+ <dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-redis</artifactId>
+ </dependency>
+ 
+<dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+    <type>jar</type>
+</dependency>
+
 
 	</dependencies>
 
