--- a/docker/config/bootstrap-dev.yml
+++ b/docker/config/bootstrap-dev.yml
@@ -18,6 +18,11 @@ management.metrics.export.graphite:
 #management.metrics.export.influx:
 #    uri: http://monitoring-influxdb:30080
 spring:
+    cache.type: redis
+    redis.host: redis-0.redis-hs.default.svc.cluster.local
+    redis.port: 6379
+    cache.cache-names: cache1,cache2
+    cache.redis.time-to-live: 60000
     application:
         name: SpringBootMicroservice
         
