--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.7.RELEASE</version>
+		<!-- <version>2.0.7.RELEASE</version> -->
+		<version>2.1.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
   
@@ -25,10 +26,9 @@ Edgware.SR3
 Dalston.SR3
 Fishtown.BUILD-SNAPSHOT
 
-2.0.4.RELEASE Finchley.RELEASE
-1.5.10.RELEASE Dalston.SR3
-
- --> 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+2.0.7.RELEASE Finchley.RELEASE
+2.1.2.RELEASE Greenwich.M2
+ --> 		<spring-cloud.version>Greenwich.M2</spring-cloud.version>
   		 		<start-class>mk.MicroserviceApp</start-class>
 	</properties>
   
@@ -325,5 +325,19 @@ Fishtown.BUILD-SNAPSHOT
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+
+<repositories>
+
+<!-- for Greenwich.M2 -->
+    <repository>
+        <id>spring-milestones</id>
+        <name>Spring Milestones</name>
+        <url>http://repo.spring.io/libs-milestone-local</url>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+    </repository>
+</repositories>
 
 </project>
