--- a/config/bootstrap-dev.yml
+++ b/config/bootstrap-dev.yml
@@ -46,7 +46,8 @@ spring:
             maximum-pool-size: 5
             pool-name: yourPoolName
             auto-commit: true
-        url: jdbc:mysql://localhost:3306/test
+        #url: jdbc:mysql://localhost:3306/test?useUnicode=true;useJDBCCompliantTimezoneShift=true;useLegacyDatetimeCode=false;serverTimezone=UTC
+        url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC
         username: root
         password: 
 #spring.datasource.driver-class-name=Driver
