--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,12 @@
   <artifactId>SpringBootMicroservice</artifactId>
   <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<!-- <version>2.0.7.RELEASE</version> -->
-		<version>2.1.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.5.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
   
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,7 +27,7 @@ Fishtown.BUILD-SNAPSHOT
 
 2.0.7.RELEASE Finchley.RELEASE
 2.1.2.RELEASE Greenwich.M2
- --> 		<spring-cloud.version>Greenwich.M2</spring-cloud.version>
+ --> 		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
   		 		<start-class>mk.MicroserviceApp</start-class>
 	</properties>
   
@@ -263,7 +262,7 @@ Fishtown.BUILD-SNAPSHOT
 
 <dependency>
 <groupId>org.springframework.cloud</groupId>
-<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+<artifactId>spring-cloud-starter-zipkin</artifactId>
 </dependency>
 
 <!-- 
@@ -314,12 +313,22 @@ Fishtown.BUILD-SNAPSHOT
 			
 		</dependency>
 
- 
+<!--
  <dependency>
     <groupId>org.springframework.data</groupId>
     <artifactId>spring-data-redis</artifactId>
  </dependency>
- 
+-->
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-data-redis</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>it.ozimov</groupId>
+          <artifactId>embedded-redis</artifactId>
+          <version>0.7.2</version>
+          <!--<scope>test</scope>-->
+      </dependency>
 <!-- 
   <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -331,9 +340,15 @@ Fishtown.BUILD-SNAPSHOT
     <artifactId>jedis</artifactId>
     <type>jar</type>
 </dependency>
+      <dependency>
+          <groupId>it.ozimov</groupId>
+          <artifactId>embedded-redis</artifactId>
+          <version>0.7.2</version>
+          <scope>compile</scope>
+      </dependency>
 
 
-	</dependencies>
+  </dependencies>
 
 <dependencyManagement>
 		<dependencies>
@@ -346,19 +361,4 @@ Fishtown.BUILD-SNAPSHOT
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-
-<repositories>
-
-<!-- for Greenwich.M2 -->
-    <repository>
-        <id>spring-milestones</id>
-        <name>Spring Milestones</name>
-        <url>http://repo.spring.io/libs-milestone-local</url>
-        <snapshots>
-            <enabled>false</enabled>
-        </snapshots>
-    </repository>
-</repositories>
-
 </project>
